# gme-sampler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
data/: test_data.csv
gme/: gme.py  helpers.py
tests/: test_gme.py  test_helpers.py
tests/data/: expected_top_10.tsv
